<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/f_add_profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/margin_20"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_picture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <EditText
                    android:id="@+id/f_add_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_add_first_name_hint"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <EditText
                    android:id="@+id/f_add_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_add_last_name_hint"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_telephone_24"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10" />

            <EditText
                android:id="@+id/f_add_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:inputType="phone"
                android:hint="@string/f_add_phone_number_hint"
                android:layout_marginEnd="@dimen/margin_10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_24"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10" />

            <EditText
                android:id="@+id/f_add_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:inputType="textEmailAddress"
                android:hint="@string/f_add_email_hint"
                android:layout_marginEnd="@dimen/margin_10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_brithday_24"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10" />

            <EditText
                android:id="@+id/f_add_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:inputType="date"
                android:focusable="false"
                android:hint="@string/f_add_date_of_brith_hint"
                android:layout_marginEnd="@dimen/margin_10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gender_24"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10" />

            <Spinner
                android:id="@+id/f_add_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginRight="@dimen/margin_10"
                android:entries="@array/gender_array"
                android:layout_marginEnd="@dimen/margin_10" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@color/grey_300"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <Button
            android:id="@+id/f_add_save_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/cyan_800"
           android:textColor="@color/white"
            android:text="@string/f_add_button_text"
            android:elevation="3dp">
        </Button>
    </LinearLayout>



</LinearLayout>